src/objects/Charket__WeChatMenuItem__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Key__c</fullName>
        <inlineHelpText>The key used to match a WeChat message.</inlineHelpText>
        <label>Key</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__LongUrl__c</fullName>
        <label>Long URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__ParentMenuItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Menu Item</label>
        <referenceTo>Charket__WeChatMenuItem__c</referenceTo>
        <relationshipLabel>WeChat Child Menu Items</relationshipLabel>
        <relationshipName>ChildMenuItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>WeChat Menu Items</relationshipLabel>
        <relationshipName>WeChatMenuItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <formula>IF(AND(RecordType.Name = &apos;Action Menu Item&apos;, NOT(ISBLANK(TEXT (Charket__WeChatAction__c)))), TEXT (Charket__WeChatAction__c), LOWER(RecordType.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__UniqueUrl__c</fullName>
        <label>Unique URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Url__c</fullName>
        <inlineHelpText>Please make sure the &quot;URL&quot; start with &quot;http://&quot;.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAction__c</fullName>
        <label>WeChat Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scan</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Photo Library</fullName>
                </value>
                <value>
                    <fullName>Camera or Photo Library</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatMenu__c</fullName>
        <label>WeChat Menu</label>
        <referenceTo>Charket__WeChatMenu__c</referenceTo>
        <relationshipLabel>WeChat Menu Items</relationshipLabel>
        <relationshipName>WeChatMenuItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMessage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Message</label>
        <referenceTo>Charket__WeChatMessage__c</referenceTo>
        <relationshipLabel>WeChat Menu Items</relationshipLabel>
        <relationshipName>WeChatMenuItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WeChat Menu Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Menu Items</pluralLabel>
    <recordTypes>
        <fullName>Charket__ActionMenuItem</fullName>
        <active>true</active>
        <description>An action menu item triggers an action</description>
        <label>Action Menu Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charket__LinkMenuItem</fullName>
        <active>true</active>
        <description>A link menu item opens a URL</description>
        <label>Link Menu Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Charket__Http_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BEGINS(Charket__Url__c, &apos;http&apos;)) &amp;&amp; Charket__Type__c == &apos;link menu item&apos;</errorConditionFormula>
        <errorDisplayField>Charket__Url__c</errorDisplayField>
        <errorMessage>The URL should start with &quot;http://&quot; or &quot;https://&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charket__Key_Length_Not_Greater_Than_128</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( Charket__Key__c )  &gt; 128</errorConditionFormula>
        <errorDisplayField>Charket__Key__c</errorDisplayField>
        <errorMessage>The menu&apos;s key value can contain 128 characters at most</errorMessage>
    </validationRules>
</CustomObject>